# antiNSFW_validator

./: .gitignore  .pre-commit-config.yaml  README.md  check_training.sh  pyproject.toml  run_training.sh
.dvc/: config
.mlruns/0/: meta.yaml
.mlruns/0/06a8e44d7e5d41b6864bd10c803610f2/: meta.yaml
.mlruns/0/06a8e44d7e5d41b6864bd10c803610f2/tags/: mlflow.runName
.mlruns/0/0b5d9884ea6143598b8a1a3c7fcb2232/: meta.yaml
.mlruns/0/0b5d9884ea6143598b8a1a3c7fcb2232/tags/: mlflow.runName
.mlruns/0/369e1fb1b7a3462283a92552cf67c50c/: meta.yaml
.mlruns/0/369e1fb1b7a3462283a92552cf67c50c/tags/: mlflow.runName
.mlruns/0/5b0e57f4d9ab4c3aa1d0896677b63264/: meta.yaml
.mlruns/0/5b0e57f4d9ab4c3aa1d0896677b63264/tags/: mlflow.runName  mlflow.source.git.commit
.mlruns/0/5f1a7f023a7a4ebe93d52713ae255821/: meta.yaml
.mlruns/0/5f1a7f023a7a4ebe93d52713ae255821/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
.mlruns/0/877a34effba04f149a52fa3eb094475b/: meta.yaml
.mlruns/0/877a34effba04f149a52fa3eb094475b/tags/: mlflow.runName
.mlruns/0/c11c0f5cd24445368333ecfa13643d88/: meta.yaml
.mlruns/0/c11c0f5cd24445368333ecfa13643d88/tags/: mlflow.runName
.mlruns/0/d56f12df85f94ba8aa514313c1f83e73/: meta.yaml
.mlruns/0/d56f12df85f94ba8aa514313c1f83e73/tags/: mlflow.runName
.mlruns/0/ead766ba0cc240afba5389c35e38ae97/: meta.yaml
.mlruns/0/ead766ba0cc240afba5389c35e38ae97/tags/: mlflow.runName
.mlruns/0/f66f449d545d4e8ab2c3980e6267df9c/: meta.yaml
.mlruns/0/f66f449d545d4e8ab2c3980e6267df9c/tags/: mlflow.runName
.mlruns/0/models/m-0ec9bdebe40a4e9387be244694dbf756/: meta.yaml
.mlruns/0/models/m-53613838bfcf4776bcaa47dc220c2f9f/: meta.yaml
.mlruns/0/models/m-5f99a59b5c2e46d7a112449476b643a4/: meta.yaml
.mlruns/236451232755784722/: meta.yaml
.mlruns/236451232755784722/0bfe70e1c420479ba8444efd3282453a/: meta.yaml
.mlruns/236451232755784722/897fa4ac01ef44d981e2be1d463ffbca/: meta.yaml
.mlruns/236451232755784722/9d434a59ebe7405990f5714863124408/: meta.yaml
.mlruns/236451232755784722/c1dc7b3b30d04ed8b71e9a0a9ce3c2c9/: meta.yaml
.mlruns/236451232755784722/dc16c99d7bab4e2fb444b08bb9fa6cb3/: meta.yaml
.mlruns/models/nsfw_detection_model/: meta.yaml
configs/: baseline_model.yaml  config.yaml  config_baseline.yaml  data.yaml  infer_config.yaml  model.yaml  plots_config.yaml  serve_model_config.yaml  trainer.yaml  trainer_baseline.yaml  training.yaml
configs/export/: export_onnx_config.yaml
configs/infer/: infer_config.yaml
configs/logging/: logging.yaml
configs/mlflow_model/: mlflow_model_config.yaml
configs/model/: baseline_model.yaml
configs/optimizer/: optimizer.yaml
configs/register/: register_model_config.yaml
configs/serve/: serve_model_config.yaml
configs/train/: config.yaml  config_baseline.yaml
configs/trainer/: trainer.yaml
nsfw/: .gitignore  pyproject.toml
nsfw/configs/: logging.yaml  model.yaml  optimizer.yaml
nsfw/src/nsfw/: baseline_model.py  data.py  model.py  train.py  trainer.py
src/dataset/: .gitignore  nsfw.dvc  sfw.dvc
src/nsfw/: baseline_model.py  conf_analyzer.py  data.py  dvc_utils.py  export_onnx.py  generate_plots.py  infer.py  mlflow_model.py  model.py  register_model.py  serve_model.py  train.py  transforms_factory.py
(+117 files in other folders)
