[project]
name = "nsfw"
version = "0.1.0"
description = ""
authors = [
    {name = "Temo4ka",email = "artemy.bukin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "nsfw", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
